Fix misaligned search bar

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -9,7 +9,7 @@
 }
 
 .header-container {
-    position: sticky    ;
+    position: sticky   ;
     top: 0;
     left: 0;
     min-width: 100%;
@@ -19,18 +19,10 @@
     background-color: #e3e3e3; 
     z-index: 1000; /* ensures the header stays on top */
     display: flex;
-    align-items: flex-start;
-    place-items: center;
+    align-items: center;
     justify-content: space-between;
-    overflow-x: auto;
+    /* overflow: visible; */
 }
-
-/* html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%; 
-    place-items: top;
-} */
 
 .nav {
     position: relative
@@ -59,8 +51,11 @@
 .search-bar {
     display: flex;
     align-items: center;
+    /* place-items: center; */
+    justify-content: center;
     margin-left: 20px;
-    width: 30%
+    width: 30%;
+    height: 100%;
 }
   
 .search-bar input {
@@ -80,10 +75,6 @@
     cursor: pointer;
     height: 30px;
     width: 30px;
-    display: flex;
-    align-items: center;
-    place-items: center;
-    justify-content: center;
 }
 
 .search-icon {
@@ -140,6 +131,7 @@
     height: 40px;
     font-size: 1rem;
     justify-content: left;
+    width: 100%;
 }
 
 .profile-dropdown button:hover {
